2004-06-01 05:14  sisoft

	* src/: qslib.c, qslib.h:

	add files qslib.[ch].
	add support for recursive <if>-expressions and conditional includes.

2004-06-01 05:12  sisoft

	* Changes, src/config.c, src/flagexp.y, src/tools.h:

	add support for recursive <if>-expressions and conditional includes.

2004-05-31 17:19  sisoft

	* src/: Makefile.am, byteop.h, gmtoff.c, headers.h, qcc.c, qctl.c,
	  ver.c.in, ver.h, xmem.c, xmem.h, xstr.c, xstr.h:

	manage files.

2004-05-31 17:15  sisoft

	* Changes, configure.in, debian/qcc.8, debian/qctl.8,
	  src/Makefile.am, src/byteop.h, src/defs.h, src/ftn.c,
	  src/gmtoff.c, src/headers.h, src/log.c, src/main.c, src/modem.c,
	  src/qcc.c, src/qctl.c, src/replace.h, src/tools.c, src/tools.h,
	  src/tty.c, src/ver.h, src/xmem.c, src/xmem.h, src/xstr.c,
	  src/xstr.h:

	join files xstr,xmem,gtmoff,ver in qslib.
	fix internal setproctitle().
	in qcc/qctl: request password from user, if option '-w-' used.
	qcc: don't show real cmdline in 'ps' command.

2004-05-30 03:34  sisoft

	* Changes, src/Makefile.am, src/aso.c, src/binkp.c, src/bso.c,
	  src/call.c, src/config.c, src/daemon.c, src/ftn.h, src/globals.c,
	  src/globals.h, src/log.c, src/mailer.h, src/main.c, src/queue.c,
	  src/session.c, src/tools.h, stuff/Makefile.am, stuff/ftn,
	  stuff/freebsd/distinfo:

	changes in config parser.
	merge aso and bso outbounds code.

2004-05-29 15:56  sisoft

	* Makefile.am, src/execsh.c:

	remove src/execsh.c.

2004-05-29 15:54  sisoft

	* Changes, qico.spec, src/Makefile.am, src/call.c, src/defs.h,
	  src/execsh.c, src/headers.h, src/mailer.h, src/modem.c,
	  src/qcc.c, src/tools.c, src/tools.h, stuff/Makefile.am,
	  stuff/freebsd/Makefile, stuff/freebsd/distinfo,
	  stuff/freebsd/pkg-descr, stuff/freebsd/pkg-install,
	  stuff/freebsd/pkg-plist:

	[no log message]

2004-05-28 08:15  sisoft

	* src/modem.c:

	add mistaked modem.c.

2004-05-27 22:50  sisoft

	* src/: Makefile.am, binkp.c, call.c, config.c, daemon.c, emsi.c,