@@ -1,10 +1,9 @@
-/* $Id: TodayFixes,v 1.75 2004/06/02 13:20:06 sisoft Exp $ */
+/* $Id: TodayFixes,v 1.76 2004/06/03 02:01:47 sisoft Exp $ */
 ---
-fix multiline defines in config.
-add support for change if--endif to {--} blocks (see conf.sample).
+fix compile without binkp.
 .
 previous:
 ---
-add files qslib.[ch].
-add support for recursive <if>-expressions and conditional includes.
+fix multiline defines in config.
+add support for change if--endif to {--} blocks (see conf.sample).
 .
