@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-02 17:18";
+char cvsdate[]="2004-06-03 06:00";
